[package]
name = "noruffle-backend"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Vitalii Vorobiov <noruffle@gmail.com>"]

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = "0.7.7"
axum-macros = "0.4.2"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
rand = "0.8.5"
redis = "0.27.2"
time = "0.3.36"
serde = {version = "1.0.210", features = ["derive"]}
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
